# golden-eval-registry

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml  registry.json
.github/workflows/: ci.yml  nightly-smoke.yml
docs/: ARCHITECTURE.md  PRODUCT.md  SLO.md
docs/adr/: 0001-versioned-golden-eval-registry.md  0002-real-scorer-and-first-ci-gate.md
src/golden_eval_registry/: __init__.py  runner.py  schema.py  validate.py
suites/aegisloop_mission_gates_v1/: cases.jsonl  manifest.json
suites/content_factory_graph_v1/: cases.jsonl  manifest.json
suites/content_factory_graph_v1/states/: hitl_approved.json  hitl_skip_x.json
suites/domainforge_triage_preference_v1/: cases.jsonl  manifest.json
suites/enterprise_rag_adversarial_v1/: cases.jsonl  manifest.json
suites/enterprise_rag_adversarial_v1/corpus/: policy-001.json  secret-compensation.json
suites/enterprise_rag_golden_v1/: cases.jsonl  manifest.json
suites/enterprise_rag_golden_v1/corpus/: policy-001.json
suites/loopforge_benchmark_v1/: cases.jsonl  manifest.json
suites/loopforge_repo_fix_v1/: cases.jsonl  manifest.json
suites/omniforge_routing_outcome_v1/: cases.jsonl  manifest.json
suites/sentinel_brief_gate_v1/: cases.jsonl  manifest.json
suites/vap_orchestrator_invariant_v1/: cases.jsonl  manifest.json
tests/: test_registry.py  test_runner.py
